Pending changes exported from your codespace

--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
 
+
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+   <link rel="stylesheet" href="style.css">
+
+
+   <title>Document</title>
+</head>
+<body>
+  
+   <button class="button1" onclick="window.location.href-page1.html">Who Am I</button>
+   <button class="button2" onclick="window.location.href-page2.html">My Life</button>
+   <button class="button3" onclick="window.location.href-page3.html">More Info</button>
+   <button class="button4" onclick="window.location.href-page4.html">Credits</button>
+  
+   <h1 class="headertitle"> Hello! Welcome to my website! </h1>
+  
+   <img src="https://i.pinimg.com/originals/f9/13/46/f9134655b53cbeaeb00664b04371b9b0.png" class="hi-image">
+
+
+</body>
+</html>
